test/programs/good/check-terms-precedence/quantum_controlled_gate_with_vars_followed_by_let_sugar_multiple.lq
fun :: Qbit
fun = with [ v1, v2 ] ctrl [ @1, @1 ] gate H ((var1, var2) <- term1 ; term2)
