test/programs/bad/sampleAlgorithm__ControlAndTargetQubitsNotDifferent_QuantumControlledGate.lq
oracle ::  !(Qbit ** 8 -> Qbit ** 8)
oracle' qubits = |q0, q1, q2, q3, q4, q5, q6, q7| <- qubits;
                q0 <- with [ q0 ] ctrl [ 0b1 ] gate ID q0;
                with [ q0, q1, q2, q3, q4, q5, q7 ] ctrl [ @1, @0, @1, @1, @1, @1, @1] gate H q3


oracle2 :: Qbit ** 3 -> Qbit ** 3
oracle2 qubits = |q0, q1, q2| <- qubits;
                 |q0, q1, q2| <- with [ q0, q1, q2 ] ctrl [ @1, @1, @1 ] gate H q0;
	          (q0, q1, q2)

oracle3 :: Qbit ** 3 -> Qbit ** 3
oracle3 qubits = |q0, q1, q2| <- qubits;
                 q0 <-  with [ q1, q2 ] ctrl [ 0b1, 0b1 ] gate H q2;
		   q0

oracle4 :: Qbit ** 3 -> Qbit ** 3
oracle4 qubits = |q0, q1, q2| <- qubits;
                 |q0, q1, q2| <- with [ new @0, q1 q2 ] ctrl [ @1, @1, @1 ] gate H q1;
                 (q0, q1, q2)

main :: !(Bit ** 7)
main = |q0, q1, q2, q3, q4, q5, q6, q7| <- (new @0, new @0, new @0, new @0, new @0, new @0, new @0, new @0);
       |q0, q1, q2, q3, q4, q5, q6, q7| <- (gate H q0, gate H q1, gate H q2, gate H q3, gate H q4, gate H q5, gate H q6 gate H q7);
       |q0, q1, q2, q3, q4, q5, q6, q7| <- oracle q0 q1 q2 q3 q4 q5 q6 q7;
       |q0, q1, q2| <- with [ q0, q1, q2 ] ctrl [ @1, @1, @1 ] gate SWAP (q0, q2);
       (measr q0, measr q1, measr q2, measr q3, measr q4, measr q5, measr q6)



